[package]
name = "axum"
version = "0.1.0"
authors = ["piaoger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["runtime", "server", "http1", "http2"] }
axum = "0.1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }